# open-webui-mws-gpt

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.yml  .prettierrc  Dockerfile  Dockerfile.backend  Dockerfile.frontend  TROUBLESHOOTING.md  docker-compose.bad.yaml  docker-compose.playwright.yaml  docker-compose.terminal-orchestrator.yaml  docker-compose.yaml  hatch_build.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
backend/: dev.sh
backend/open_webui/: config.py  env.py  main.py
backend/open_webui/models/: chat_context_segments.py  chat_context_state.py  chat_summaries.py  mcp_apps.py  models.py  widgets.py
backend/open_webui/orchestration/: __init__.py  classifier.py  executor.py  planner.py  policy.py  registry.py  schema.py  validator.py
backend/open_webui/retrieval/: utils.py
backend/open_webui/routers/: files.py  (+6 more)
scripts/: run-open_webui.bat  run-open_webui.sh  setup-open_webui.bat  setup-open_webui.sh
services/terminal-orchestrator/: Dockerfile  README.md  policies.yaml  pyproject.toml
services/terminal-orchestrator/src/terminal_orchestrator/: __main__.py  api_files.py  api_policies.py  api_skills.py  auth.py  config.py  container_manager.py  docker_client.py  http_proxy.py  logging_config.py  main.py  openapi_synthetic.py  policies.py  ratelimit.py  ws_proxy.py
skills/pptx/: pptxgenjs.md
src/: app.css  app.html  tailwind.css
src/lib/: constants.ts  dayjs.js  emoji-groups.json  shortcuts.ts
src/routes/: +error.svelte  +layout.svelte
static/static/: loader.js  site.webmanifest
(+662 files in other folders)
